# surreal-obsidian-mcp

./: .gitignore  CHANGELOG.md  Cargo.toml  EXAMPLES.md  INSTALL.md  LICENSE  README.md  USAGE.md  config.example.json  config.openai.json  config.openwebui.json  config.together.json  config.venice.json  flake.nix  nixos-example.nix
.github/workflows/: ci.yml  format.yml  release.yml
src/: config.rs  db.rs  embeddings.rs  indexer.rs  lib.rs  main.rs  mcp_server.rs  parser.rs  reranking.rs  sync.rs  watcher.rs  writer.rs
src/transport/: http.rs
