[package]
name = "surreal-obsidian-mcp"
version = "0.1.0"
edition = "2021"
authors = ["Jonas Emilsson"]
description = "MCP server for indexing Obsidian vaults into SurrealDB with RAG and graph capabilities"
license = "AGPL-3.0-or-later"
repository = "https://github.com/jemilsson/surreal-obsidian-mcp"

[lib]
name = "surreal_obsidian_mcp"
path = "src/lib.rs"

[[bin]]
name = "surreal-obsidian-mcp"
path = "src/main.rs"

[dependencies]
# MCP Protocol
rmcp = { version = "0.16", features = ["server", "macros", "schemars", "transport-io", "transport-streamable-http-server"] }

# HTTP/SSE transport for OpenWebUI
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
futures = "0.3"
async-stream = "0.3"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"

# Database (pure Rust - only SurrealKV for persistent storage, no auth/jwt)
surrealdb = { version = "3.0", features = ["kv-surrealkv"], default-features = false }
surrealdb-types = "3.0"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
schemars = "1.2"
toml = "0.8"
config = "0.14"

# Markdown parsing
pulldown-cmark = "0.11"
pulldown-cmark-to-cmark = "15"
gray_matter = "0.2"

# mq - markdown query language (temporarily disabled for faster build)
# mq-lang = "0.5"
# mq-markdown = "0.5"

# File watching
notify = "6.1"
notify-debouncer-full = "0.3"

# HTTP client for embeddings/reranking APIs (pure Rust with rustls)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# ML/Embeddings (Candle)
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
hf-hub = { version = "0.3", optional = true }
tokenizers = { version = "0.20", optional = true }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
regex = "1.10"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.14"

[features]
default = []
embedded = ["candle-core", "candle-nn", "candle-transformers", "hf-hub", "tokenizers"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
